Cleaned up the root directory.

--- a/package.json
+++ b/package.json
@@ -25,31 +25,24 @@
 		"url": "https://github.com/sizeofcat/civitas.git"
 	},
 	"devDependencies": {
-		"beepbeep": "^1.2.2",
 		"browser-sync": "^2.11.1",
 		"eslint": "^5.5.0",
+		"fs": "^0.0.1-security",
 		"gulp": "^4.0.0",
-		"gulp-autoprefixer": "^6.0.0",
 		"gulp-cache": "^1.0.2",
 		"gulp-concat": "^2.5.2",
 		"gulp-filter": "^5.1.0",
-		"gulp-merge-media-queries": "^0.2.1",
+		"gulp-header": "^2.0.9",
 		"gulp-notify": "^3.0.0",
 		"gulp-plumber": "^1.2.0",
 		"gulp-remember": "^1.0.1",
 		"gulp-rename": "^1.2.0",
+		"gulp-replace": "^1.0.0",
 		"gulp-sass": "^4.0.2",
 		"gulp-sort": "^2.0.0",
 		"gulp-sourcemaps": "^2.6.2",
-		"gulp-uglify": "^3.0.0",
-		"gulp-uglifycss": "^1.0.6",
-		"fs": "0.0.1-security",
-		"gulp-header": "^2.0.9",
-		"gulp-jsdoc3": "^2.0.0",
-		"gulp-replace": "^1.0.0",
-		"docdash": "^1.1.1",
 		"gulp-terser": "^1.2.0",
-		"gulp-imagemin": "^6.0.0"
+		"gulp-uglifycss": "^1.0.6"
 	},
 	"scripts": {
 		"start": "gulp",
